--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,7 @@
         <gradle.version>1.6</gradle.version>
         <gson.version>2.5</gson.version>
         <moshi.version>1.5.0</moshi.version>
-        <scala.version>2.10.1</scala.version>
-        <scalaArm.scalaVersion>2.10</scalaArm.scalaVersion>
+        <jackson2x.version>2.9.1</jackson2x.version>
     <gib.commitRange>${env.TRAVIS_COMMIT_RANGE}</gib.commitRange>
         <gib.enabled>true</gib.enabled>
         <gib.useEkstazi>true</gib.useEkstazi>
@@ -293,7 +292,17 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.7.2</version>
+                <version>${jackson2x.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson2x.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>${jackson2x.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.stefanbirkner</groupId>
@@ -316,7 +325,6 @@
                 <artifactId>jsr305</artifactId>
                 <version>3.0.1</version>
             </dependency>
-
             <dependency>
                 <groupId>com.squareup.moshi</groupId>
                 <artifactId>moshi</artifactId>
